# ai-dev-team

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: developers.json  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: base.py  developer.py  json_utils.py  planner.py  prompts.py  reviewer.py  tester.py
backend/app/data/: developers.json
backend/app/models/: database.py  enums.py  pipeline.py  schemas.py
backend/app/pipeline/: merge.py  orchestrator.py  state.py  task_assigner.py
backend/app/providers/: anthropic_provider.py  base.py  ollama.py  openai_provider.py  registry.py
backend/app/routes/: chat.py  developers.py  export.py  history.py  pipeline.py  projects.py  providers.py  settings.py
backend/app/services/: developer_store.py  file_manager.py  git_ops.py  key_store.py  project_analyzer.py
backend/app/ws/: events.py  manager.py
backend/tests/: conftest.py  test_developers.py  test_file_manager.py  test_health.py  test_merge.py  test_providers.py  test_task_assigner.py
docs/plans/: implementation-plan.md
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/chat/: ChatBox.tsx
frontend/src/components/code/: CodeViewer.tsx  FileTree.tsx
frontend/src/components/developers/: AddDevModal.tsx  DeveloperCard.tsx  DeveloperCards.tsx  DeveloperDetailModal.tsx
frontend/src/contexts/: PipelineContext.tsx  SettingsContext.tsx
frontend/src/hooks/: useDevelopers.ts  useRecentItems.ts  useWebSocket.ts
frontend/src/services/: api.ts
frontend/src/types/: events.ts  index.ts
(+13 files in other folders)
